testing new repo

--- a/gpy.ipynb
+++ b/gpy.ipynb
@@ -41,7 +41,7 @@
     "length = 100 # starting with 1m\n",
     "whole_map = pd.read_csv('WholeMap_Rounds_40_to_17.csv')\n",
     "map = stack_map(whole_map) # create a stacked map dataframe with columns x, y, z\n",
-    "map = cut_map_len(map,100,length) # cut the map to the length of the map\n",
+    "map = cut_map_len(map,100,length) # cut the map to the length of the map frame : 1m to 2m\n",
     "known_points, unknown_points = resample(map, sampling_distance_x, sampling_distance_y) # resample the map\n"
    ]
   },
